<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="work.rahulyadav.rahul.nearby.SignUpActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginTextView"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/accent_material_light"
        android:textColor="#ffffff"
        android:textSize="35sp"
        android:paddingTop="100dp"
        android:paddingBottom="25dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editTextLoginMobile"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@android:drawable/editbox_background_normal"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:textSize="20sp"
        android:hint="@string/loginMobile"
        android:layout_marginTop="10dp" />

    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/imageButtonLogIn"
        android:src="@drawable/arrow_right_submit"
        android:background="#00ffffff"
        android:scaleType="centerCrop"
        android:contentDescription="@string/arrow_image"
        android:layout_marginBottom="56dp"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/editTextLoginMobile" />
    <ImageButton
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:id="@+id/imageButtonSignUp"
        android:src="@drawable/sign_up"
        android:background="#00ffffff"
        android:scaleType="centerCrop"
        android:contentDescription="@string/ristration_signup"
        android:layout_alignTop="@+id/imageButtonLogIn"
        android:layout_alignStart="@+id/editTextLogInPassword" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextLogInPassword"
        android:layout_below="@+id/editTextLoginMobile"
        android:layout_alignStart="@+id/editTextLoginMobile"
        android:textSize="20sp"
        android:hint="@string/loginPass"
        android:background="@android:drawable/editbox_background_normal"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:inputType="number" />
</RelativeLayout>
